# chat-vertex-rag

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  DEMO_WALKTHROUGH.md  LICENSE  README.md  requirements.md  setup-dev.sh  vertex-ai-rag.md  vertex-rag-engine-ex.md
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: chat.py  documents.py  search.py  websocket.py
backend/app/models/: schemas.py
backend/app/services/: document_ai_processor.py  document_uploader.py  enhanced_document_processor.py  gemini_client.py  rag_engine.py  vertex_ai_grounding.py  vertex_ai_ranking.py  vertex_search.py
docs/: GCP_SETUP.md  TECHNICAL_GUIDE.md
frontend/: .gitignore  .prettierignore  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ActivityLog.tsx  ChatInterface.tsx  ChatInterfaceV2.tsx  DocumentList.tsx  DocumentViewer.tsx  FileUploader.tsx
frontend/src/components/ui/: checkbox.tsx  sheet.tsx
frontend/src/types/: index.ts
scripts/: setup-dev.sh  setup-gcp.sh
